fixed bug in select2 alignment

--- a/style.css
+++ b/style.css
@@ -112,9 +112,12 @@ p {
   background-color: yellowgreen;
   color: white;
 }
+.select2-container--default{
+  margin-right: 25px;
+}
 
 input {
-  margin-left: 25px;
+  /* margin-left: 25px; */
   /* padding: 0 10px; */
   width: 80%;
 }
